<resources>
    <string name="app_name">ProcessShareInstance</string>
    <string name="text_process_main">这是主进程</string>
    <string name="text_process_b">这是进程B</string>
    <string name="start_processb">启动进程B</string>
    <string name="start_processmain">启动主进程</string>
    <string name="invoke_main_increment">调用主进程方法increment</string>
    <string name="invoke_b_increment">调用进程B方法increment</string>
    <string name="count_main">count In Main Process count = 0</string>
    <string name="count_b">count In B Process count = 0</string>
</resources>
