<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/main_text_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/main_text_count_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_text_main"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/count_main" />

    <TextView
        android:id="@+id/main_text_count_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_text_count_main"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/count_b" />

    <Button
        android:id="@+id/main_start_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_text_count_b"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/start_processb" />

    <Button
        android:id="@+id/main_invoke_main_increment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_start_b"
        android:layout_centerHorizontal="true"
        android:text="@string/invoke_main_increment" />

    <Button
        android:id="@+id/main_invoke_b_increment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_invoke_main_increment"
        android:layout_centerHorizontal="true"
        android:text="@string/invoke_b_increment" />

</RelativeLayout>
