<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/b_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/b_text_count"
        android:layout_below="@id/b_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/count_0"/>

    <Button
        android:id="@+id/b_start_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/b_text_count"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/start_processmain"/>

    <Button
        android:id="@+id/b_invoke_main_increment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/b_start_main"
        android:layout_centerHorizontal="true"
        android:text="@string/invoke_main_increment"/>

    <Button
        android:id="@+id/b_invoke_b_increment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/b_invoke_main_increment"
        android:layout_centerHorizontal="true"
        android:text="@string/invoke_b_increment"/>

</RelativeLayout>